--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "commander": "^7.2.0"
+    "chalk": "^4.1.1",
+    "commander": "^7.2.0",
+    "fs-extra": "^10.0.0"
   }
 }
