--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "chalk": "^4.1.1",
     "commander": "^7.2.0",
+    "cross-spawn": "^7.0.3",
+    "ember-cli": "^3.26.1",
     "fs-extra": "^10.0.0"
   }
 }
